test/files/pos/t8062/A_1.scala
package warmup

object Warmup {
  def filter[A](p: Any => Boolean): Any = filter[Any](p)
}
