test/files/neg/t12513/predefined_1.scala

package p

object MyPredef {
  private [p] def x = 27
  def y = 42
}
